<resources>
    <string name="app_name">Centro de Treinamento Garagem</string>
    <string name="titulo_toolbar">ctgaragem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="anaminese">Anaminese</string>
    <string name="cadastro_cliente">Cadastro de clientes</string>
    <string name="modalidades">Modalidades</string>
    <string name="planos_promocoes">Planos e Promoções</string>
    <string name="fale_conosco">Fale conosco</string>
    <string name="treinamento">Treinamentos</string>
    <string name="localizacao">Venha nos visitar</string>
    <string name="sobre">Sobre</string>
    <string name="mestres">Mestres e Professores</string>
    <string name="graduacao">Cadastro de graduações</string>
    <string name="ranking">Ranking Estadual</string>
    <string name="estatuto">Estatuto</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagran</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="marker_title">Centro de Treinamento Garagem</string>
    <string name="marker_snippet">Esporte é saúde</string>
    <string name="erro_gps">É necessário habilitar a configuração de localização para utilizar o aplicativo.</string>
    <string name="destino">Destino</string>
    <string name="origem2">Jesus</string>
    <string name="erro_local">Você deve habilitar as permissões para utilizar o aplicativo.</string>
    <string name="contatos">Contatos</string>

</resources>
